Fix tenant config resolution and runtime path handling